--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
+    		<groupId>org.mockito</groupId>
+    		<artifactId>mockito-inline</artifactId>
+    		<version>5.2.0</version>
+		</dependency>
+		<dependency>
     		<groupId>com.google.code.gson</groupId>
    			<artifactId>gson</artifactId>
 		</dependency>
@@ -95,6 +100,13 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+  				<groupId>org.apache.maven.plugins</groupId>
+  				<artifactId>maven-surefire-plugin</artifactId>
+  				<configuration>
+   					<argLine>-javaagent:${settings.localRepository}/org/mockito/mockito-inline/5.2.0/mockito-inline-5.2.0.jar</argLine>
+  				</configuration>
+				</plugin>
 		</plugins>
 	</build>
 
