--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
         	<groupId>com.fasterxml.jackson.core</groupId>
        		<artifactId>jackson-databind</artifactId>
    		 </dependency>
+   		 <dependency>
+    		<groupId>io.github.cdimascio</groupId>
+    		<artifactId>dotenv-java</artifactId>
+    		<version>3.2.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
