--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
+spring.config.import=optional:file:.env[.properties]
 spring.application.name=delivery_mail
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/delivery
-spring.datasource.username=postgres
-spring.datasource.password=1234567
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 
